styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --royal-blue: #106cd1;
    --black: #1f2937;
    --gutter: 20px;
}

#navbar {
    box-shadow: 0 5px 20px -10px #000;
}

#navbar > div {
    height: 100%;
}

#scheduling-btn {
    background-color: #106cd1;
    border: 2px solid #fff;
    color: #fff;
    cursor: pointer;
    display: inline-block;
    line-height: 1;
    padding: 8px 30px;
    text-align: center;
    text-decoration: none;
    border-radius: 12px;
    box-shadow: 0 4px 8px rgba(0, 9, 61, 0.24);
}

.hero-headline {
    color: var(--royal-blue);
    text-shadow: 0.125em 0.125em 0.125em rgb(0 0 0 / 10%);
}

.logo {
    height: 7rem;
}

.hamburger-menu-color {
    color: black;
}

#hero-subheadline {
    text-shadow: 0.125em 0.125em 0.125em rgb(0 0 0 / 10%);
}

nav ul li {
    text-shadow: 0.125em 0.125em 0.125em rgb(0 0 0 / 10%);
}

#hero-svg-divider {
    width: calc(132% + 1.3px);
}
.hero-svg-waves {
    fill: var(--royal-blue);
}
.custom-shape-divider-bottom-1612037810 .shape-fill {
    fill: #ffffff;
}

.custom-shape-divider-bottom-1612146550 {
    position: absolute;
    bottom: -1px;

    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
    transform: rotate(180deg);
}

.custom-shape-divider-bottom-1612146550 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 70px;
}

.custom-shape-divider-bottom-1612146550 .shape-fill {
    fill: #106cd1;
}

/* SVG Divider */
.custom-shape-divider-bottom-1612154150 {
    position: absolute;
    bottom: -1px;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-bottom-1612154150 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 69px;
    transform: rotateY(180deg);
}

.custom-shape-divider-bottom-1612154150 .shape-fill {
    fill: #ffffff;
}

.testimonial {
    border-radius: 1rem;
}
#image-gallery-section {
    margin-bottom: 3em;
    scrollbar-width: none;
}

.app {
    padding: var(--gutter) 0;
    display: grid;
    grid-gap: var(--gutter) 0;
    grid-template-columns: var(--gutter) 1fr var(--gutter);
    align-content: start;
    z-index: 39;
}

.app > * {
    grid-column: 2 / -2;
}

.app > .full {
    grid-column: 1 / -1;
}

.hs {
    display: grid;
    grid-gap: calc(var(--gutter) / 2);
    grid-template-columns: repeat(6, minmax(300px, 1fr));
    grid-template-rows: minmax(150px, 1fr);

    overflow-x: scroll;
    scroll-snap-type: x proximity;
    padding-bottom: calc(0.75 * var(--gutter));
    margin-bottom: calc(-0.25 * var(--gutter));
}
.item {
    object-fit: cover;
    height: 100%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
}

@keyframes bounce {
    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(-30px);
    }
    60% {
        transform: translateY(-15px);
    }
}

.fabWrap {
    align-items: center;
    bottom: 24px;
    display: flex;
    flex-direction: column;
    position: fixed;
    right: 24px;
    z-index: 100;
}

.fabIcon::before {
    background-image: url('/images/fab-phone.png');
    background-size: cover;
    content: '';
    height: 80%;
    width: 80%;
    display: block;
    margin: auto;
}

.fabIcon {
    align-items: center;
    background-color: #106cd1;
    border: 0;
    border-radius: 50%;
    box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
        0 1px 10px 0 rgb(0 0 0 / 12%);
    color: #fff;
    cursor: pointer;
    display: inline-flex;
    height: 56px;
    overflow: hidden;
    padding: 0;
    position: relative;
    text-indent: -9999px;
    text-overflow: initial;
    text-transform: uppercase;
    width: 56px;
}

.fabIconArrow {
    color: var(--black);
    font-size: 2em;
    animation: bounce 5s infinite;
}

.heading-underline {
    border: 0;
    height: 1px;
    background-image: linear-gradient(
        to right,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.75),
        rgba(0, 0, 0, 0)
    );
}

/* Blog Page */
.mt-15vh {
    margin-top: 15vh;
}

.learn-more-btn {
    color: #073464;
    border: #073464 solid 2px;
}

/* Utilities */
.brand-blue {
    color: var(--royal-blue);
}
.border-brand-blue {
    border-color: var(--royal-blue);
}
.bg-brand-blue {
    background-color: var(--royal-blue);
}
.bg-white {
    background-color: #fff;
}
.bg-bed4ff {
    background-color: #d9eafc;
}
.border-dark-blue {
    border-color: #d9eafc;
}
.accessible-dark-blue {
    color: #062d55;
}

#housecall-bar {
    background-color: white;
    height: 50px;
    text-align: center;
}

#housecall-button {
    border: 2px solid #fff;
    color: #fff;
    cursor: pointer;
    display: inline-block;
    line-height: 1;
    margin: 7px 0 0 0;
    padding: 8px 30px;
    font-family: Roboto, Arial, Sans-Serif;
    text-align: center;
    transition: background-color 300ms ease-out;
    text-decoration: none;
    background-color: #106cd1 !important;
    border-radius: 12px !important;
    box-shadow: 0 4px 8px rgba(0, 9, 61, 0.24) !important;
    transform: translateZ(calc(-6 * 1px)) !important;
}

body img {
    display: none;
}

